src/testData/analysis/integerLiterals/invalidOctalPrefix.cr
0

<error descr="Octal constants should be prefixed with 0o">00</error>

<error descr="Octal constants should be prefixed with 0o">0123</error>

-0

<error descr="Octal constants should be prefixed with 0o">-00</error>

<error descr="Octal constants should be prefixed with 0o">-0123</error>